[gd_scene load_steps=12 format=2]

[ext_resource path="res://EnemyBird.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Monsters/MovementAI.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=4]
[ext_resource path="res://Scripts/DamageArea.gd" type="Script" id=5]
[ext_resource path="res://Scenes/BloodEffect.tscn" type="PackedScene" id=6]
[ext_resource path="res://BlinkingMaterial.tres" type="Material" id=7]
[ext_resource path="res://Scripts/DefaultEnemyStates/IdleAI.gd" type="Script" id=8]
[ext_resource path="res://StateMachine/FiniteStateMachine.gd" type="Script" id=9]
[ext_resource path="res://Scripts/DefaultEnemyStates/Staggered.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=16]
radius = 13.4371

[sub_resource type="CircleShape2D" id=15]
radius = 23.3928

[node name="EnemyBird" type="KinematicBody2D" groups=["ENEMIES"]]
scale = Vector2( 0.6, 0.6 )
z_index = 5
collision_layer = 8
collision_mask = 10
collision/safe_margin = 3.031
script = ExtResource( 2 )
DamageEffect = ExtResource( 6 )
startStatePath = NodePath("FiniteStateMachine/IdleAI")
speed = 30

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 7 )
frames = ExtResource( 1 )
animation = "right_walk"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 16 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )
maximumHealth = 50

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 15 )

[node name="Timer" type="Timer" parent="DamageArea"]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="IdleAI" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 8 )

[node name="Staggered" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 10 )

[connection signal="damageTaken" from="Health" to="." method="_on_Health_damageTaken"]
[connection signal="damageTaken" from="Health" to="FiniteStateMachine/IdleAI" method="_on_Health_damageTaken"]
[connection signal="healthDepleted" from="Health" to="." method="_on_Health_healthDepleted"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageArea/Timer" to="DamageArea" method="_on_Timer_timeout"]
